# privates.py

./: .coverage  .gitignore  CHANGELOG.md  LICENSE.txt  README.md  hatch.toml  mkdocs.yml  pyproject.toml
.github/workflows/: build.yml  tests.yml
docs/: attributes.md  index.md  reference.md  scope_privates.md
src/privates/: __about__.py  __init__.py  _util.py  exceptions.py  modifiers.py
tests/: __init__.py  test_modifiers.py
